--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 4000",
+    "dev": "next dev -p 4001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@gear-js/api": "^0.38.3",
+    "@polkadot/extension-dapp": "^0.53.1",
+    "@polkadot/types": "^14.0.1",
+    "sails-js": "^0.3.0",
     "@noble/secp256k1": "^2.1.0",
     "@rainbow-me/rainbowkit": "^2.1.2",
     "@tanstack/react-query": "^5.49.2",
