--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,52 +1,50 @@
 {
-  "name": "my-tarot-project",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 4001",
     "build": "next build",
+    "dev": "next dev -p 4002",
+    "prettier": "prettier --write --ignore-unknown .",
+    "prettier:check": "prettier --check --ignore-unknown .",
     "start": "next start",
-    "lint": "next lint"
+    "seed": "node -r dotenv/config ./scripts/seed.js"
   },
   "dependencies": {
     "@gear-js/api": "^0.38.3",
-    "@polkadot/extension-dapp": "^0.53.1",
-    "@polkadot/types": "^14.0.1",
-    "sails-js": "^0.3.0",
-    "@noble/secp256k1": "^2.1.0",
-    "@rainbow-me/rainbowkit": "^2.1.2",
-    "@tanstack/react-query": "^5.49.2",
-    "@tronweb3/tronwallet-abstract-adapter": "^1.1.6",
-    "@tronweb3/tronwallet-adapter-react-hooks": "^1.1.7",
-    "@tronweb3/tronwallet-adapter-react-ui": "^1.1.8",
-    "@tronweb3/walletconnect-tron": "^2.0.0",
-    "axios": "^1.6.7",
-    "dotenv": "^16.4.5",
-    "ethers": "^6.12.1",
-    "fs": "0.0.1-security",
-    "js-cookie": "^3.0.5",
-    "jwt-decode": "^4.0.0",
+    "@heroicons/react": "^2.0.18",
+    "@polkadot/api": "^14.1.1",
+    "@polkadot/extension-dapp": "^0.54.1",
+    "@polkadot/types": "^14.1.1",
+    "@polkadot/util": "^13.2.1",
+    "@polkadot/util-crypto": "^13.2.1",
+    "@tailwindcss/forms": "^0.5.7",
+    "@types/node": "20.5.7",
+    "@vercel/postgres": "^0.5.1",
+    "autoprefixer": "10.4.15",
+    "bcrypt": "^5.1.1",
+    "clsx": "^2.0.0",
     "lottie-web": "^5.12.2",
-    "near-api-js": "^0.44.2",
-    "next": "14.1.0",
-    "openai": "^4.28.0",
-    "react": "^18.2.0",
-    "react-dom": "^18",
-    "react-hot-toast": "^2.4.1",
-    "rxjs": "^7.8.1",
-    "tronweb": "^5.3.2",
-    "viem": "2.x",
-    "wagmi": "^2.10.8",
-    "zod": "^3.22.4",
-    "zustand": "^4.5.2"
+    "next": "^14.0.2",
+    "postcss": "8.4.31",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "sails-js": "^0.3.0",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.2.2",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@types/react": "18.2.79",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "5.4.5"
+    "@types/bcrypt": "^5.0.1",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.14",
+    "@vercel/style-guide": "^5.0.1",
+    "dotenv": "^16.3.1",
+    "eslint": "^8.52.0",
+    "eslint-config-next": "^14.0.0",
+    "eslint-config-prettier": "9.0.0",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "0.5.4"
+  },
+  "engines": {
+    "node": ">=18.17.0"
   }
 }
